--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: The EF Research Log
-email: your-email@example.com
+title: Ethereal Firmament
+email: ycQC5BfRDGAI7xH@proton.me
 description: >-
-  Field notes on the alignment problem, stoic philosophy, and the mathematics of wealth. A digital commonplace book.
+  Field notes on the alignment problem, philosophy, mathematics, and anything that might interest me. A digital commonplace book.
 baseurl: ""
 url: "https://ethereal-firmament.github.io"
 
